// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification renders empty state 1`] = `
<div
  className="m-notifications"
/>
`;

exports[`Notification renders latest notification 1`] = `
<div
  className="m-notifications"
>
  <div
    className="m-notifications__card m-notifications__card--new"
  >
    <button
      className="m-notifications__card-info"
      onClick={[Function]}
    >
      <div
        className="m-notification-content"
      >
        <div
          className="m-notification-content__title-row"
        >
          <div
            className="m-notification-content__title"
          >
            No Operator
          </div>
          <div
            className="m-notification-content__age"
          >
            10:17 AM
          </div>
        </div>
        <div
          className="m-notification-content__description"
        >
          OCC reported that an operator is not available on the r1, r2.
        </div>
        <div
          className="m-properties-list"
        >
          <table
            className="m-properties-list__table"
          >
            <tbody>
              <tr
                className="m-properties-list__property "
              >
                <td
                  className="m-properties-list__property-label"
                >
                  Run
                </td>
                <td
                  className="m-properties-list__property-value"
                >
                  run1, run2
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </button>
    <button
      className="m-notifications__close"
      onClick={[Function]}
    >
      Hide
    </button>
  </div>
</div>
`;

exports[`NotificationCard renders a notification with an unexpected reason 1`] = `
<div
  className="m-notifications__card m-notifications__card--new"
>
  <button
    className="m-notifications__card-info"
    onClick={[Function]}
  >
    <div
      className="m-notification-content"
    >
      <div
        className="m-notification-content__title-row"
      >
        <div
          className="m-notification-content__title"
        >
          Other
        </div>
        <div
          className="m-notification-content__age"
        >
          0 min
        </div>
      </div>
      <div
        className="m-notification-content__description"
      >
        OCC created a dispatcher note for the r1, r2.
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody>
            <tr
              className="m-properties-list__property "
            >
              <td
                className="m-properties-list__property-label"
              >
                Run
              </td>
              <td
                className="m-properties-list__property-value"
              >
                run1, run2
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </button>
  <button
    className="m-notifications__close"
    onClick={[Function]}
  >
    Hide
  </button>
</div>
`;

exports[`NotificationCard renders notification with matched vehicle 1`] = `
<div
  className="m-notifications__card m-notifications__card--new"
>
  <button
    className="m-notifications__card-info"
    onClick={[Function]}
  >
    <div
      className="m-notification-content"
    >
      <div
        className="m-notification-content__title-row"
      >
        <div
          className="m-notification-content__title"
        >
          No Operator
        </div>
        <div
          className="m-notification-content__age"
        >
          0 min
        </div>
      </div>
      <div
        className="m-notification-content__description"
      >
        OCC reported that an operator is not available on the r1, r2.
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody>
            <tr
              className="m-properties-list__property "
            >
              <td
                className="m-properties-list__property-label"
              >
                Run
              </td>
              <td
                className="m-properties-list__property-value"
              >
                run1, run2
              </td>
            </tr>
            <tr
              className="m-properties-list__property m-properties-list__property--operator"
            >
              <td
                className="m-properties-list__property-label"
              >
                Operator
              </td>
              <td
                className="m-properties-list__property-value"
              >
                operatorName #operatorId
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </button>
  <button
    className="m-notifications__close"
    onClick={[Function]}
  >
    Hide
  </button>
</div>
`;

exports[`NotificationCard renders notification with reason accident 1`] = `
<div
  className="m-notifications__card m-notifications__card--new"
>
  <button
    className="m-notifications__card-info"
    onClick={[Function]}
  >
    <div
      className="m-notification-content"
    >
      <div
        className="m-notification-content__title-row"
      >
        <div
          className="m-notification-content__title"
        >
          Accident
        </div>
        <div
          className="m-notification-content__age"
        >
          0 min
        </div>
      </div>
      <div
        className="m-notification-content__description"
      >
        OCC reported that an operator has been in an accident on the r1, r2.
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody>
            <tr
              className="m-properties-list__property "
            >
              <td
                className="m-properties-list__property-label"
              >
                Run
              </td>
              <td
                className="m-properties-list__property-value"
              >
                run1, run2
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </button>
  <button
    className="m-notifications__close"
    onClick={[Function]}
  >
    Hide
  </button>
</div>
`;

exports[`NotificationCard renders notification with reason adjusted 1`] = `
<div
  className="m-notifications__card m-notifications__card--new"
>
  <button
    className="m-notifications__card-info"
    onClick={[Function]}
  >
    <div
      className="m-notification-content"
    >
      <div
        className="m-notification-content__title-row"
      >
        <div
          className="m-notification-content__title"
        >
          Adjusted
        </div>
        <div
          className="m-notification-content__age"
        >
          0 min
        </div>
      </div>
      <div
        className="m-notification-content__description"
      >
        OCC reported an adjustment on the r1, r2.
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody>
            <tr
              className="m-properties-list__property "
            >
              <td
                className="m-properties-list__property-label"
              >
                Run
              </td>
              <td
                className="m-properties-list__property-value"
              >
                run1, run2
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </button>
  <button
    className="m-notifications__close"
    onClick={[Function]}
  >
    Hide
  </button>
</div>
`;

exports[`NotificationCard renders notification with reason chelsea_st_bridge_lowered 1`] = `
<div
  className="m-notifications__card m-notifications__card--new"
>
  <button
    className="m-notifications__card-info"
    onClick={[Function]}
  >
    <div
      className="m-notification-content"
    >
      <div
        className="m-notification-content__title-row"
      >
        <div
          className="m-notification-content__title"
        >
          Chelsea St Bridge Lowered
        </div>
        <div
          className="m-notification-content__age"
        >
          0 min
        </div>
      </div>
      <div
        className="m-notification-content__description"
      >
        OCC reported that the Chelsea St bridge has been lowered.
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody />
        </table>
      </div>
    </div>
  </button>
  <button
    className="m-notifications__close"
    onClick={[Function]}
  >
    Hide
  </button>
</div>
`;

exports[`NotificationCard renders notification with reason chelsea_st_bridge_raised 1`] = `
<div
  className="m-notifications__card m-notifications__card--new"
>
  <button
    className="m-notifications__card-info"
    onClick={[Function]}
  >
    <div
      className="m-notification-content"
    >
      <div
        className="m-notification-content__title-row"
      >
        <div
          className="m-notification-content__title"
        >
          Chelsea St Bridge Raised
        </div>
        <div
          className="m-notification-content__age"
        >
          0 min
        </div>
      </div>
      <div
        className="m-notification-content__description"
      >
        OCC reported that the Chelsea St bridge will be raised until 10:17 AM.
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody />
        </table>
      </div>
    </div>
  </button>
  <button
    className="m-notifications__close"
    onClick={[Function]}
  >
    Hide
  </button>
</div>
`;

exports[`NotificationCard renders notification with reason disabled 1`] = `
<div
  className="m-notifications__card m-notifications__card--new"
>
  <button
    className="m-notifications__card-info"
    onClick={[Function]}
  >
    <div
      className="m-notification-content"
    >
      <div
        className="m-notification-content__title-row"
      >
        <div
          className="m-notification-content__title"
        >
          Disabled
        </div>
        <div
          className="m-notification-content__age"
        >
          0 min
        </div>
      </div>
      <div
        className="m-notification-content__description"
      >
        OCC reported that a vehicle is disabled on the r1, r2.
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody>
            <tr
              className="m-properties-list__property "
            >
              <td
                className="m-properties-list__property-label"
              >
                Run
              </td>
              <td
                className="m-properties-list__property-value"
              >
                run1, run2
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </button>
  <button
    className="m-notifications__close"
    onClick={[Function]}
  >
    Hide
  </button>
</div>
`;

exports[`NotificationCard renders notification with reason diverted 1`] = `
<div
  className="m-notifications__card m-notifications__card--new"
>
  <button
    className="m-notifications__card-info"
    onClick={[Function]}
  >
    <div
      className="m-notification-content"
    >
      <div
        className="m-notification-content__title-row"
      >
        <div
          className="m-notification-content__title"
        >
          Diversion
        </div>
        <div
          className="m-notification-content__age"
        >
          0 min
        </div>
      </div>
      <div
        className="m-notification-content__description"
      >
        OCC reported that an operator has been diverted from the r1, r2.
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody>
            <tr
              className="m-properties-list__property "
            >
              <td
                className="m-properties-list__property-label"
              >
                Run
              </td>
              <td
                className="m-properties-list__property-value"
              >
                run1, run2
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </button>
  <button
    className="m-notifications__close"
    onClick={[Function]}
  >
    Hide
  </button>
</div>
`;

exports[`NotificationCard renders notification with reason manpower 1`] = `
<div
  className="m-notifications__card m-notifications__card--new"
>
  <button
    className="m-notifications__card-info"
    onClick={[Function]}
  >
    <div
      className="m-notification-content"
    >
      <div
        className="m-notification-content__title-row"
      >
        <div
          className="m-notification-content__title"
        >
          No Operator
        </div>
        <div
          className="m-notification-content__age"
        >
          0 min
        </div>
      </div>
      <div
        className="m-notification-content__description"
      >
        OCC reported that an operator is not available on the r1, r2.
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody>
            <tr
              className="m-properties-list__property "
            >
              <td
                className="m-properties-list__property-label"
              >
                Run
              </td>
              <td
                className="m-properties-list__property-value"
              >
                run1, run2
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </button>
  <button
    className="m-notifications__close"
    onClick={[Function]}
  >
    Hide
  </button>
</div>
`;

exports[`NotificationCard renders notification with reason operator_error 1`] = `
<div
  className="m-notifications__card m-notifications__card--new"
>
  <button
    className="m-notifications__card-info"
    onClick={[Function]}
  >
    <div
      className="m-notification-content"
    >
      <div
        className="m-notification-content__title-row"
      >
        <div
          className="m-notification-content__title"
        >
          Operator Error
        </div>
        <div
          className="m-notification-content__age"
        >
          0 min
        </div>
      </div>
      <div
        className="m-notification-content__description"
      >
        OCC reported an operator error on the r1, r2.
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody>
            <tr
              className="m-properties-list__property "
            >
              <td
                className="m-properties-list__property-label"
              >
                Run
              </td>
              <td
                className="m-properties-list__property-value"
              >
                run1, run2
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </button>
  <button
    className="m-notifications__close"
    onClick={[Function]}
  >
    Hide
  </button>
</div>
`;

exports[`NotificationCard renders notification with reason other 1`] = `
<div
  className="m-notifications__card m-notifications__card--new"
>
  <button
    className="m-notifications__card-info"
    onClick={[Function]}
  >
    <div
      className="m-notification-content"
    >
      <div
        className="m-notification-content__title-row"
      >
        <div
          className="m-notification-content__title"
        >
          Other
        </div>
        <div
          className="m-notification-content__age"
        >
          0 min
        </div>
      </div>
      <div
        className="m-notification-content__description"
      >
        OCC created a dispatcher note for the r1, r2.
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody>
            <tr
              className="m-properties-list__property "
            >
              <td
                className="m-properties-list__property-label"
              >
                Run
              </td>
              <td
                className="m-properties-list__property-value"
              >
                run1, run2
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </button>
  <button
    className="m-notifications__close"
    onClick={[Function]}
  >
    Hide
  </button>
</div>
`;

exports[`NotificationCard renders notification with reason traffic 1`] = `
<div
  className="m-notifications__card m-notifications__card--new"
>
  <button
    className="m-notifications__card-info"
    onClick={[Function]}
  >
    <div
      className="m-notification-content"
    >
      <div
        className="m-notification-content__title-row"
      >
        <div
          className="m-notification-content__title"
        >
          Traffic
        </div>
        <div
          className="m-notification-content__age"
        >
          0 min
        </div>
      </div>
      <div
        className="m-notification-content__description"
      >
        OCC created a dispatcher note due to traffic on the r1, r2.
      </div>
      <div
        className="m-properties-list"
      >
        <table
          className="m-properties-list__table"
        >
          <tbody>
            <tr
              className="m-properties-list__property "
            >
              <td
                className="m-properties-list__property-label"
              >
                Run
              </td>
              <td
                className="m-properties-list__property-value"
              >
                run1, run2
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </button>
  <button
    className="m-notifications__close"
    onClick={[Function]}
  >
    Hide
  </button>
</div>
`;
